add_executable(Buffer_test Buffer_test.cpp)
target_link_libraries(Buffer_test sevent_net)
add_executable(Channel_test Channel_test.cpp)
target_link_libraries(Channel_test sevent_net)
add_executable(InetAddress_test InetAddress_test.cpp)
target_link_libraries(InetAddress_test sevent_net)
add_executable(TimerQueue_test TimerQueue_test.cpp)
target_link_libraries(TimerQueue_test sevent_net)